; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/core/extr_rtw_wlan_util.c_SelectChannel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/core/extr_rtw_wlan_util.c_SelectChannel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SelectChannel(%struct.adapter* %0, i8 zeroext %1) #0 {
  %3 = alloca %struct.adapter*, align 8
  %4 = alloca i8, align 1
  store %struct.adapter* %0, %struct.adapter** %3, align 8
  store i8 %1, i8* %4, align 1
  %5 = load %struct.adapter*, %struct.adapter** %3, align 8
  %6 = call %struct.TYPE_2__* @adapter_to_dvobj(%struct.adapter* %5)
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = call i64 @mutex_lock_interruptible(i32* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %22

11:                                               ; preds = %2
  %12 = load %struct.adapter*, %struct.adapter** %3, align 8
  %13 = load i8, i8* %4, align 1
  %14 = call i32 @rtw_set_oper_ch(%struct.adapter* %12, i8 zeroext %13)
  %15 = load %struct.adapter*, %struct.adapter** %3, align 8
  %16 = load i8, i8* %4, align 1
  %17 = call i32 @rtw_hal_set_chan(%struct.adapter* %15, i8 zeroext %16)
  %18 = load %struct.adapter*, %struct.adapter** %3, align 8
  %19 = call %struct.TYPE_2__* @adapter_to_dvobj(%struct.adapter* %18)
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = call i32 @mutex_unlock(i32* %20)
  br label %22

22:                                               ; preds = %11, %10
  ret void
}

declare dso_local i64 @mutex_lock_interruptible(i32*) #1

declare dso_local %struct.TYPE_2__* @adapter_to_dvobj(%struct.adapter*) #1

declare dso_local i32 @rtw_set_oper_ch(%struct.adapter*, i8 zeroext) #1

declare dso_local i32 @rtw_hal_set_chan(%struct.adapter*, i8 zeroext) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
